fixing overflow on home-text-block

--- a/scss/_bscore_custom.scss
+++ b/scss/_bscore_custom.scss
@@ -331,6 +331,7 @@ img.onion {
 .home-text-block {
   font-weight: 300;
   line-height: 6.5rem;
+  overflow: initial;
 }
 
 .home-text-block strong{
